fix not visible borders bug in FF

--- a/src/sass/components/_table_richtext.scss
+++ b/src/sass/components/_table_richtext.scss
@@ -64,6 +64,8 @@ div[tabindex="0"][aria-labelledby][role="region"].colheaders {
 
 .th-block,
 .td-block {
+    position: relative;
+    background-clip: padding-box;
     border: 1px solid #777;
     padding: 0.75rem 1.5rem;
     text-align: left;
